# authix-todo

./: .gitignore  AUTH_FLOW.md  Cargo.toml  Dockerfile  README.MD  diesel.toml  docker-compose.yaml  keycloak_auth_report.md  keycloak_pub.pem  state.json
.gitea/workflows/: ci.yaml
css/: base.css  header.css  main.css
javascript/: login.js  main.js
kubernetes/: cnpg-postgres-cluster.yaml  cnpg-postgres-secret.yaml  web-application-deployment.yaml  web-application-service.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2025-07-01-000000_add_unique_constraint_to_users_unique_id/: down.sql  up.sql
migrations/2025-07-03-153420_create_to_do_items/: down.sql  up.sql
migrations/2025-07-14-160354_create_users/: down.sql  up.sql
migrations/2025-09-05-111047_user_title_constraint/: down.sql  up.sql
migrations/2025-09-06-182928_change_user_id_to_varchar/: down.sql  up.sql
src/: database.rs  main.rs  processes.rs  schema.rs  state.rs
src/auth/: jwt.rs  keycloak_config.rs  mod.rs  processes.rs
src/json_serialization/: new_user.rs  to_do_item.rs  to_do_items.rs
src/middleware/: request_logger.rs
src/models/item/: delete_item.rs  item.rs  mod.rs  new_item.rs  update_item.rs
src/models/user/: mod.rs  new_user.rs  user.rs  user_utils.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  mod.rs
templates/: login.html  main.html
templates/components/: header.html
(+11 files in other folders)
